computer_science/ai/genai-on-kubernetes/chapter5-chatbot/k3s/manifests/chatbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-ui-deployment
  labels:
    app.kubernetes.io/name: chatbot-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: chatbot-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chatbot-ui
    spec:
      containers:
        - name: rag-ui-container
          image: chatbot-ui:k3s
          # image: choisunguk/ch5-chatbot-ui:k3s-py312-amd64
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7860
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
