computer_science/ai/genai-on-kubernetes/chapter5-chatbot/k3s/manifests/chatbot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ui-ingress
  labels:
    app.kubernetes.io/name: chatbot-ui
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-ui-service
                port:
                  number: 7860
